created style sheet

--- a/app/src/main/res/layout/menu_screen.xml
+++ b/app/src/main/res/layout/menu_screen.xml
@@ -8,20 +8,46 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="130dp"
-        android:layout_height="140dp"
-        app:srcCompat="@drawable/logo_removebg_preview"
-        tools:layout_editor_absoluteX="140dp"
-        tools:layout_editor_absoluteY="95dp" />
+        android:layout_width="160dp"
+        android:layout_height="161dp"
+        android:layout_marginTop="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_removebg_preview" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_bold"
-        android:text="Need a movie?"
+        android:gravity="center|top"
+        android:text="@string/menu_header_text"
+        android:textAlignment="center"
         android:textColor="#214A00"
         android:textSize="35sp"
-        tools:layout_editor_absoluteX="110dp"
-        tools:layout_editor_absoluteY="248dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="195dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/start_search_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:strokeColor="#2B2B2B"
+        tools:layout_editor_absoluteY="484dp" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="268dp"
+        android:layout_height="240dp"
+        android:layout_marginTop="-15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:srcCompat="@drawable/undraw_horror_movie_3988" />
 </androidx.constraintlayout.widget.ConstraintLayout>
