--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="title_text">
+
+        <item name="android:textSize">
+            35sp
+        </item>
+
+        <item name="android:textColor">
+            @color/dark_green
+        </item>
+
+    </style>
+
     <style name="header_text">
 
         <item name="android:textSize">
@@ -7,7 +19,7 @@
         </item>
 
         <item name="android:textColor">
-            #214A00
+            @color/dark_green
         </item>
 
     </style>
@@ -19,7 +31,7 @@
         </item>
 
         <item name="android:textColor">
-            #637754
+            @color/light_green
         </item>
 
     </style>
@@ -31,7 +43,7 @@
         </item>
 
         <item name="android:textColor">
-            #000000
+            @color/black
         </item>
 
     </style>
@@ -43,7 +55,7 @@
         </item>
 
         <item name="android:textColor">
-            #FFFFFF
+            @color/white
         </item>
 
     </style>
@@ -55,7 +67,7 @@
         </item>
 
         <item name="android:textColor">
-            #949494
+            @color/light_grey
         </item>
 
     </style>
@@ -67,7 +79,7 @@
         </item>
 
         <item name="android:textColor">
-            #637754
+            @color/light_green
         </item>
 
     </style>
@@ -79,7 +91,7 @@
         </item>
 
         <item name="android:textColor">
-            #E16E6E
+            @color/salmon
         </item>
 
     </style>
@@ -91,7 +103,7 @@
         </item>
 
         <item name="android:textColor">
-            #949494
+            @color/light_grey
         </item>
 
     </style>
