--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,6 +2,10 @@
 <resources>
     <style name="header_text">
 
+        <item name="android:fontFamily">
+            "@font/roboto_bold"
+        </item>
+
         <item name="android:textSize">
             27sp
         </item>
@@ -13,6 +17,10 @@
     </style>
 
     <style name="secondary_header_text">
+
+        <item name="android:fontFamily">
+            "@font/roboto_bold"
+        </item>
 
         <item name="android:textSize">
             27sp
