--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -137,6 +137,31 @@
         <item name="android:textColor">
             @color/light_grey
         </item>
+    </style>
 
+
+    <style name="button" parent="Widget.AppCompat.Button">
+        <item name="android:layout_width">
+            wrap_content
+        </item>
+
+        <item name="android:layout_height">
+            wrap_content
+        </item>
+
+        <item name="android:textAppearance">
+            @style/button_text
+        </item>
+
+        <item name="android:background">
+            @drawable/button
+        </item>
+
+        <item name="android:focusable">
+            true
+        </item>
+        <item name="android:clickable">
+            true
+        </item>
     </style>
 </resources>
