--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="loading_screen_text">
+
+        <item name="android:fontFamily">
+            @font/prompt_bold
+        </item>
+
+        <item name="android:textSize">
+            40sp
+        </item>
+
+        <item name="android:textColor">
+            @color/white
+        </item>
+
+    </style>
+
     <style name="title_text">
 
         <item name="android:textSize">
