--- a/app/src/main/res/layout/loading_screen.xml
+++ b/app/src/main/res/layout/loading_screen.xml
@@ -7,10 +7,11 @@
     android:background="@color/dark_green">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/logo_loading"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="225dp"
+        android:contentDescription="@string/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,5 +25,5 @@
         android:textAppearance="@style/loading_screen_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/logo_loading" />
 </androidx.constraintlayout.widget.ConstraintLayout>
