--- a/app/src/main/res/layout/loading_screen.xml
+++ b/app/src/main/res/layout/loading_screen.xml
@@ -1,29 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_gravity="center_vertical"
     android:background="@color/dark_green">
 
     <ImageView
         android:id="@+id/logo_loading"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginTop="225dp"
+        android:layout_gravity="center|center_vertical"
+        android:layout_marginTop="80dp"
         android:contentDescription="@string/logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo_white" />
 
     <TextView
         android:id="@+id/loading_screen_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="@string/app_name"
-        android:textAppearance="@style/loading_screen_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo_loading" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:textAppearance="@style/loading_screen_text" />
+</LinearLayout>
